Thu Jun  8 22:49:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* path.cc (path_conv::check): Erase two lines checked in
        by mistake.

Thu Jun  8 15:53:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* fhandler.cc (fhandler_disk_file::open): Check for directory
	to set O_DIROPEN on directories anyway.

2000-06-07  Kazuhiro Fujieda <fujieda@jaist.ac.jp>

        * path.cc (mount_info::init): Eliminate the mount_slash feature.
        (mount_slash): Eliminated.
        (mount_info::read_mounts): Eliminate looking up existing entries. The
        loop for deleting cygpath entries is done only when such entries exist.
        (mount_info::from_registry): Eliminate sorting.
        (mount_info::add_item): Call add_reg_mount if necessary. Check nmounts
        more precisely. Use strcasematch in looking up existing entries.
        (mount_info::del_item): Call del_reg_mount if necessary. Use
        strcasematch. Use memmove instead of memcpy.
        (mount_info::import_v1_registry): Everything is done in this method.
        (mount_info::to_registry): Eliminated.
        (mount_info::from_v1_registry): Eliminated.
        (cygwin_umount): Simply call del_item.
        * shared.h: Modify the declaration of add_item and del_item. Remove the
        declaration of from_v1_registry.

Wed Jun  7 23:56:10 2000  Christopher Faylor <cgf@cygnus.com>

	* include/cygwin/version.h: Bump DLL minor version number to 3.

2000-06-07  DJ Delorie  <dj@cygnus.com>

	* cygwin.din: add cygwin_dll_init
	* dcrt0.cc (cygwin_dll_init): new
	(dll_crt0_1): short circuit if manually loaded
	* path.cc (mount_info::init): don't init if manually loaded

Wed Jun  7 13:47:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* include/netinet/in_systm.h: New file.
	* include/cygwin/in_systm.h: Ditto.

Thu Jun  1 01:55:45 2000  Christopher Faylor <cgf@cygnus.com>

	* exceptions.cc: Remove unneeded include.
	* dcrt0.cc: Wrap LoadDLLfunc stuff in dummy function.
	* init.cc: Ditto.